--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,8 +7,42 @@
 	background-color: #434753;
 }
 
+.sidebar-nav {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+	color: #ffffff;
+}
+
+.sidebar-wrapper {
+  z-index: 1000;
+  height: 100%;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 24px;
+    line-height: 60px;
+}
+
 .chat_space {
 	background-color: #ffffff;
+	background-repeat: no-repeat;
+	background-position: center center;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .full_height {
