--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -13,7 +13,9 @@
 	padding: 20px 10px 0 10px;
 	margin: 0;
 	overflow-y: auto;
-	bottom: 120px;
+	bottom: 67px;
+	background-color: #f1f5f8;
+	box-shadow: inset 0 0px 30px rgba(0, 0, 0, 0.1);
 	top: 69px;
 }
 .messages ul {
@@ -25,20 +27,21 @@
   padding: 15px 0 15px;
   box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
   text-align: center;
-  border-radius: 0px 0px 0px 0px;
+  border-radius: 4px 0px 0px 0px;
 }
 .chat_box {
-	background-color: #f1f5f8;
+	padding: 10px;
+	border-radius: 3px;
+	background-color: transparent;
 	height: 100%;
-	border: 1px solid #ddd;
 	margin-left: -1px;
 }
 .chat_input {
 	position: absolute;
-  bottom: 50px;
+  bottom: 0px;
 	width: 100%;
 	background-color: #fff;
-	border-radius: 0px 0px 4px 4px;
+	border-radius: 0px 0px 0px 4px;
 	padding: 10px 15px;
 	border-top: 1px solid #e7e7e7;
 }
@@ -54,4 +57,5 @@
 	height: 100%;
 	overflow-y: auto;
 	border-left: 1px solid #e7e7e7;
+	border-radius: 0px 4px 4px 0px;
 }
